--- a/index.html
+++ b/index.html
@@ -12,6 +12,99 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>لمسة لتأجير لوازم المناسبات والحفلات تأجير طاولات وكراسي تاجير كنب - تاجير كوش تاجير جلسات</title>
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@graph": [
+
+    {
+      "@type": "Organization",
+      "name": "لمسة",
+      "url": "https://www.lamasat.store",
+      "logo": "https://www.lamasat.store/logo.png"
+    },
+
+    {
+      "@type": "LocalBusiness",
+      "name": "لمسة لتأجير مستلزمات الحفلات",
+      "image": "https://www.lamasat.store/logo.png",
+      "url": "https://www.lamasat.store",
+      "telephone": "+966559534118",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "الدمام",
+        "addressCountry": "SA"
+      },
+      "openingHours": "Mo-Su 09:00-23:00"
+    },
+
+    {
+      "@type": "Product",
+      "name": "تأجير كراسي وطاولات",
+      "image": "https://www.lamasat.store/images/chairs-tables.jpg",
+      "description": "تأجير كراسي وطاولات لجميع المناسبات والحفلات.",
+      "brand": {
+        "@type": "Brand",
+        "name": "لمسة"
+      },
+      "sku": "chairs-tables-001",
+      "offers": {
+        "@type": "Offer",
+        "url": "https://www.lamasat.store",
+        "priceCurrency": "SAR",
+        "price": "50",
+        "priceValidUntil": "2026-12-31",
+        "availability": "https://schema.org/InStock"
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.8",
+        "reviewCount": "120"
+      }
+    },
+
+    {
+      "@type": "Review",
+      "author": {
+        "@type": "Person",
+        "name": "محمد"
+      },
+      "datePublished": "2025-09-28",
+      "reviewBody": "خدمة ممتازة وسرعة في التوصيل.",
+      "reviewRating": {
+        "@type": "Rating",
+        "ratingValue": "5",
+        "bestRating": "5"
+      },
+      "itemReviewed": {
+        "@type": "Product",
+        "name": "تأجير كراسي وطاولات"
+      }
+    },
+
+    {
+      "@type": "MerchantReturnPolicy",
+      "name": "سياسة الإرجاع",
+      "merchantReturnDays": 1,
+      "returnFees": "https://schema.org/FreeReturn",
+      "returnMethod": "https://schema.org/ReturnByMail",
+      "returnPolicyCategory": "https://schema.org/MerchantReturnFiniteReturnWindow"
+    },
+
+    {
+      "@type": "MerchantDelivery",
+      "name": "خدمة التوصيل",
+      "hasDeliveryMethod": {
+        "@type": "DeliveryMethod",
+        "name": "شحن محلي داخل السعودية"
+      }
+    }
+
+  ]
+}
+</script>
+  
   <style>
 body {
   background: linear-gradient(to bottom, rgba(0, 128, 0, 0.05), rgba(255, 255, 255, 1));
