--- a/index.html
+++ b/index.html
@@ -13,30 +13,45 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>لمسة لتأجير لوازم المناسبات والحفلات تأجير طاولات وكراسي تاجير كنب - تاجير كوش تاجير جلسات</title>
 
-  <script type="application/ld+json">
+ <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@graph": [
 
     {
       "@type": "Organization",
-      "name": "لمسة",
+      "name": "لمسة لتأجير مستلزمات الحفلات",
       "url": "https://www.lamasat.store",
-      "logo": "https://www.lamasat.store/logo.png"
+      "logo": "https://www.lamasat.store/logo.png",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+966559534118",
+        "contactType": "customer service",
+        "areaServed": "SA",
+        "availableLanguage": "ar"
+      },
+      "sameAs": [
+        "https://www.instagram.com/lamasat",
+        "https://www.facebook.com/lamasat"
+      ]
     },
 
     {
       "@type": "LocalBusiness",
-      "name": "لمسة لتأجير مستلزمات الحفلات",
+      "name": "لمسات لتأجير مستلزمات الحفلات",
       "image": "https://www.lamasat.store/logo.png",
       "url": "https://www.lamasat.store",
       "telephone": "+966559534118",
       "address": {
         "@type": "PostalAddress",
+        "streetAddress": "شارع الملك فهد",
         "addressLocality": "الدمام",
+        "addressRegion": "الشرقية",
+        "postalCode": "32241",
         "addressCountry": "SA"
       },
-      "openingHours": "Mo-Su 09:00-23:00"
+      "openingHours": "Mo-Su 09:00-23:00",
+      "priceRange": "SAR"
     },
 
     {
@@ -44,11 +59,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       "name": "تأجير كراسي وطاولات",
       "image": "https://www.lamasat.store/images/chairs-tables.jpg",
       "description": "تأجير كراسي وطاولات لجميع المناسبات والحفلات.",
+      "sku": "chairs-tables-001",
       "brand": {
         "@type": "Brand",
         "name": "لمسة"
       },
-      "sku": "chairs-tables-001",
       "offers": {
         "@type": "Offer",
         "url": "https://www.lamasat.store",
@@ -61,6 +76,31 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "@type": "AggregateRating",
         "ratingValue": "4.8",
         "reviewCount": "120"
+      }
+    },
+
+    {
+      "@type": "Product",
+      "name": "تأجير كنب للمناسبات",
+      "image": "https://www.lamasat.store/images/sofa.jpg",
+      "description": "تأجير كنب فاخر للمناسبات والحفلات بأفضل الأسعار.",
+      "sku": "sofa-002",
+      "brand": {
+        "@type": "Brand",
+        "name": "لمسة"
+      },
+      "offers": {
+        "@type": "Offer",
+        "url": "https://www.lamasat.store",
+        "priceCurrency": "SAR",
+        "price": "150",
+        "priceValidUntil": "2026-12-31",
+        "availability": "https://schema.org/InStock"
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.9",
+        "reviewCount": "80"
       }
     },
 
@@ -80,6 +120,25 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       "itemReviewed": {
         "@type": "Product",
         "name": "تأجير كراسي وطاولات"
+      }
+    },
+
+    {
+      "@type": "Review",
+      "author": {
+        "@type": "Person",
+        "name": "سارة"
+      },
+      "datePublished": "2025-09-27",
+      "reviewBody": "جودة رائعة وتعامل راقي.",
+      "reviewRating": {
+        "@type": "Rating",
+        "ratingValue": "5",
+        "bestRating": "5"
+      },
+      "itemReviewed": {
+        "@type": "Product",
+        "name": "تأجير كنب للمناسبات"
       }
     },
 
