--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     {
       "@type": "LocalBusiness",
-      "name": "لمسات لتأجير مستلزمات الحفلات",
+      "name": "لمسة لتأجير مستلزمات الحفلات",
       "image": "https://www.lamasat.store/logo.png",
       "url": "https://www.lamasat.store",
       "telephone": "+966559534118",
@@ -54,29 +54,30 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       "priceRange": "SAR"
     },
 
-    {
-      "@type": "Product",
-      "name": "تأجير كراسي وطاولات",
-      "image": "https://www.lamasat.store/images/chairs-tables.jpg",
-      "description": "تأجير كراسي وطاولات لجميع المناسبات والحفلات.",
-      "sku": "chairs-tables-001",
-      "brand": {
-        "@type": "Brand",
-        "name": "لمسة"
-      },
-      "offers": {
-        "@type": "Offer",
-        "url": "https://www.lamasat.store",
-        "priceCurrency": "SAR",
-        "price": "50",
-        "priceValidUntil": "2026-12-31",
-        "availability": "https://schema.org/InStock"
-      },
-      "aggregateRating": {
-        "@type": "AggregateRating",
-        "ratingValue": "4.8",
-        "reviewCount": "120"
-      }
+   {
+  "@type": "Product",
+  "name": "تأجير كراسي وطاولات",
+  "image": "https://www.lamasat.store/images/chairs-tables.jpg",
+  "description": "تأجير كراسي وطاولات للمناسبات والحفلات بأسعار مناسبة.",
+  "sku": "chairs-001",
+  "brand": {
+    "@type": "Brand",
+    "name": "لمسة"
+  },
+  "offers": {
+    "@type": "Offer",
+    "url": "https://www.lamasat.store/chairs-tables",
+    "priceCurrency": "SAR",
+    "price": "50.00",
+    "priceValidUntil": "2026-12-31",
+    "itemCondition": "https://schema.org/NewCondition",
+    "availability": "https://schema.org/InStock"
+  },
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "4.8",
+    "reviewCount": "120"
+  }
     },
 
     {
