--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>لمسة لتأجير لوازم المناسبات والحفلات تأجير طاولات وكراسي تاجير كنب - تاجير كوش تاجير جلسات</title>
 
- <script type="application/ld+json">
+<script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@graph": [
@@ -54,30 +54,60 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       "priceRange": "SAR"
     },
 
-   {
-  "@type": "Product",
-  "name": "تأجير كراسي وطاولات",
-  "image": "https://www.lamasat.store/images/chairs-tables.jpg",
-  "description": "تأجير كراسي وطاولات للمناسبات والحفلات بأسعار مناسبة.",
-  "sku": "chairs-001",
-  "brand": {
-    "@type": "Brand",
-    "name": "لمسة"
-  },
-  "offers": {
-    "@type": "Offer",
-    "url": "https://www.lamasat.store/chairs-tables",
-    "priceCurrency": "SAR",
-    "price": "50.00",
-    "priceValidUntil": "2026-12-31",
-    "itemCondition": "https://schema.org/NewCondition",
-    "availability": "https://schema.org/InStock"
-  },
-  "aggregateRating": {
-    "@type": "AggregateRating",
-    "ratingValue": "4.8",
-    "reviewCount": "120"
-  }
+    {
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "هل تقدمون خدمة التوصيل والتركيب؟",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "نعم، جميع خدماتنا تشمل التوصيل والتركيب داخل الرياض، الدمام، الخبر وجدة."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "كم تكلفة تأجير الكنب للمناسبات؟",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "تبدأ أسعار تأجير الكنب من 150 ريال لليوم مع خصومات للكميات."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "هل يمكن تأجير الكراسي والطاولات معًا؟",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "نعم، نوفر باقات شاملة لتأجير الكراسي والطاولات والكنب بأسعار خاصة."
+          }
+        }
+      ]
+    },
+
+    {
+      "@type": "Product",
+      "name": "تأجير كراسي وطاولات",
+      "image": "https://www.lamasat.store/images/chairs-tables.jpg",
+      "description": "تأجير كراسي وطاولات لجميع المناسبات والحفلات بأسعار مناسبة.",
+      "sku": "chairs-001",
+      "brand": {
+        "@type": "Brand",
+        "name": "لمسة"
+      },
+      "offers": {
+        "@type": "Offer",
+        "url": "https://www.lamasat.store/chairs-tables",
+        "priceCurrency": "SAR",
+        "price": "50.00",
+        "priceValidUntil": "2026-12-31",
+        "itemCondition": "https://schema.org/NewCondition",
+        "availability": "https://schema.org/InStock"
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.8",
+        "reviewCount": "120"
+      }
     },
 
     {
@@ -92,16 +122,121 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       },
       "offers": {
         "@type": "Offer",
-        "url": "https://www.lamasat.store",
+        "url": "https://www.lamasat.store/sofa",
         "priceCurrency": "SAR",
-        "price": "150",
+        "price": "150.00",
         "priceValidUntil": "2026-12-31",
+        "itemCondition": "https://schema.org/NewCondition",
         "availability": "https://schema.org/InStock"
       },
       "aggregateRating": {
         "@type": "AggregateRating",
         "ratingValue": "4.9",
         "reviewCount": "80"
+      }
+    },
+
+    {
+      "@type": "Product",
+      "name": "تأجير شاشات عرض",
+      "image": "https://www.lamasat.store/images/screens.jpg",
+      "description": "تأجير شاشات عرض بمقاسات مختلفة مع أنظمة صوت متكاملة.",
+      "sku": "screen-003",
+      "brand": {
+        "@type": "Brand",
+        "name": "لمسة"
+      },
+      "offers": {
+        "@type": "Offer",
+        "url": "https://www.lamasat.store/screens",
+        "priceCurrency": "SAR",
+        "price": "400.00",
+        "priceValidUntil": "2026-12-31",
+        "itemCondition": "https://schema.org/NewCondition",
+        "availability": "https://schema.org/InStock"
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.7",
+        "reviewCount": "60"
+      }
+    },
+
+    {
+      "@type": "Product",
+      "name": "تأجير جلسات شعبية ومغربية",
+      "image": "https://www.lamasat.store/images/sessions.jpg",
+      "description": "جلسات شعبية ومغربية للمناسبات بأفضل جودة وأسعار مناسبة.",
+      "sku": "session-004",
+      "brand": {
+        "@type": "Brand",
+        "name": "لمسة"
+      },
+      "offers": {
+        "@type": "Offer",
+        "url": "https://www.lamasat.store/sessions",
+        "priceCurrency": "SAR",
+        "price": "200.00",
+        "priceValidUntil": "2026-12-31",
+        "itemCondition": "https://schema.org/NewCondition",
+        "availability": "https://schema.org/InStock"
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.9",
+        "reviewCount": "45"
+      }
+    },
+
+    {
+      "@type": "Product",
+      "name": "تأجير سماعات",
+      "image": "https://www.lamasat.store/images/speakers.jpg",
+      "description": "تأجير سماعات صوت عالية الجودة لجميع المناسبات.",
+      "sku": "speaker-005",
+      "brand": {
+        "@type": "Brand",
+        "name": "لمسة"
+      },
+      "offers": {
+        "@type": "Offer",
+        "url": "https://www.lamasat.store/speakers",
+        "priceCurrency": "SAR",
+        "price": "150.00",
+        "priceValidUntil": "2026-12-31",
+        "itemCondition": "https://schema.org/NewCondition",
+        "availability": "https://schema.org/InStock"
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.8",
+        "reviewCount": "70"
+      }
+    },
+
+    {
+      "@type": "Product",
+      "name": "خدمة القهوجيين والصبابين",
+      "image": "https://www.lamasat.store/images/coffee.jpg",
+      "description": "خدمة القهوجيين والصبابين لتقديم القهوة والشاي والمشروبات للمناسبات.",
+      "sku": "coffee-006",
+      "brand": {
+        "@type": "Brand",
+        "name": "لمسة"
+      },
+      "offers": {
+        "@type": "Offer",
+        "url": "https://www.lamasat.store/coffee",
+        "priceCurrency": "SAR",
+        "price": "300.00",
+        "priceValidUntil": "2026-12-31",
+        "itemCondition": "https://schema.org/NewCondition",
+        "availability": "https://schema.org/InStock"
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.9",
+        "reviewCount": "30"
       }
     },
 
@@ -146,6 +281,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     {
       "@type": "MerchantReturnPolicy",
       "name": "سياسة الإرجاع",
+      "applicableCountry": "SA",
       "merchantReturnDays": 1,
       "returnFees": "https://schema.org/FreeReturn",
       "returnMethod": "https://schema.org/ReturnByMail",
