--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 {
   "@context": "https://schema.org",
   "@graph": [
-
     {
       "@type": "Organization",
       "name": "لمسة لتأجير مستلزمات الحفلات",
@@ -35,7 +34,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "https://www.facebook.com/lamasat"
       ]
     },
-
     {
       "@type": "LocalBusiness",
       "name": "لمسة لتأجير مستلزمات الحفلات",
@@ -50,10 +48,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "postalCode": "32241",
         "addressCountry": "SA"
       },
-      "openingHours": "Mo-Su 09:00-23:00",
-      "priceRange": "SAR"
+      "openingHours": [
+        "Mo-Su 09:00-23:00"
+      ],
+      "priceRange": "$$"
     },
-
     {
       "@type": "FAQPage",
       "mainEntity": [
@@ -83,7 +82,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         }
       ]
     },
-
     {
       "@type": "Product",
       "name": "تأجير كراسي وطاولات",
@@ -102,14 +100,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "priceValidUntil": "2026-12-31",
         "itemCondition": "https://schema.org/NewCondition",
         "availability": "https://schema.org/InStock"
-      },
-      "aggregateRating": {
-        "@type": "AggregateRating",
-        "ratingValue": "4.8",
-        "reviewCount": "120"
       }
     },
-
     {
       "@type": "Product",
       "name": "تأجير كنب للمناسبات",
@@ -128,14 +120,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "priceValidUntil": "2026-12-31",
         "itemCondition": "https://schema.org/NewCondition",
         "availability": "https://schema.org/InStock"
-      },
-      "aggregateRating": {
-        "@type": "AggregateRating",
-        "ratingValue": "4.9",
-        "reviewCount": "80"
       }
     },
-
     {
       "@type": "Product",
       "name": "تأجير شاشات عرض",
@@ -154,14 +140,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "priceValidUntil": "2026-12-31",
         "itemCondition": "https://schema.org/NewCondition",
         "availability": "https://schema.org/InStock"
-      },
-      "aggregateRating": {
-        "@type": "AggregateRating",
-        "ratingValue": "4.7",
-        "reviewCount": "60"
       }
     },
-
     {
       "@type": "Product",
       "name": "تأجير جلسات شعبية ومغربية",
@@ -180,14 +160,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "priceValidUntil": "2026-12-31",
         "itemCondition": "https://schema.org/NewCondition",
         "availability": "https://schema.org/InStock"
-      },
-      "aggregateRating": {
-        "@type": "AggregateRating",
-        "ratingValue": "4.9",
-        "reviewCount": "45"
       }
     },
-
     {
       "@type": "Product",
       "name": "تأجير سماعات",
@@ -206,14 +180,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "priceValidUntil": "2026-12-31",
         "itemCondition": "https://schema.org/NewCondition",
         "availability": "https://schema.org/InStock"
-      },
-      "aggregateRating": {
-        "@type": "AggregateRating",
-        "ratingValue": "4.8",
-        "reviewCount": "70"
       }
     },
-
     {
       "@type": "Product",
       "name": "خدمة القهوجيين والصبابين",
@@ -232,71 +200,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "priceValidUntil": "2026-12-31",
         "itemCondition": "https://schema.org/NewCondition",
         "availability": "https://schema.org/InStock"
-      },
-      "aggregateRating": {
-        "@type": "AggregateRating",
-        "ratingValue": "4.9",
-        "reviewCount": "30"
-      }
-    },
-
-    {
-      "@type": "Review",
-      "author": {
-        "@type": "Person",
-        "name": "محمد"
-      },
-      "datePublished": "2025-09-28",
-      "reviewBody": "خدمة ممتازة وسرعة في التوصيل.",
-      "reviewRating": {
-        "@type": "Rating",
-        "ratingValue": "5",
-        "bestRating": "5"
-      },
-      "itemReviewed": {
-        "@type": "Product",
-        "name": "تأجير كراسي وطاولات"
-      }
-    },
-
-    {
-      "@type": "Review",
-      "author": {
-        "@type": "Person",
-        "name": "سارة"
-      },
-      "datePublished": "2025-09-27",
-      "reviewBody": "جودة رائعة وتعامل راقي.",
-      "reviewRating": {
-        "@type": "Rating",
-        "ratingValue": "5",
-        "bestRating": "5"
-      },
-      "itemReviewed": {
-        "@type": "Product",
-        "name": "تأجير كنب للمناسبات"
-      }
-    },
-
-    {
-      "@type": "MerchantReturnPolicy",
-      "name": "سياسة الإرجاع",
-      "applicableCountry": "SA",
-      "merchantReturnDays": 1,
-      "returnFees": "https://schema.org/FreeReturn",
-      "returnMethod": "https://schema.org/ReturnByMail",
-      "returnPolicyCategory": "https://schema.org/MerchantReturnFiniteReturnWindow"
-    },
-
-    {
-      "@type": "MerchantDelivery",
-      "name": "خدمة التوصيل",
-      "hasDeliveryMethod": {
-        "@type": "DeliveryMethod",
-        "name": "شحن محلي داخل السعودية"
       }
     }
-
   ]
 }
 </script>
