--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 {
   "@context": "https://schema.org",
   "@graph": [
+
     {
       "@type": "Organization",
       "name": "لمسة لتأجير مستلزمات الحفلات",
@@ -34,6 +35,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "https://www.facebook.com/lamasat"
       ]
     },
+
     {
       "@type": "LocalBusiness",
       "name": "لمسة لتأجير مستلزمات الحفلات",
@@ -49,62 +51,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "addressCountry": "SA"
       },
       "openingHours": "Mo-Su 09:00-23:00",
-      "priceRange": "$$",
-      "hasOfferCatalog": {
-        "@type": "OfferCatalog",
-        "name": "خدمات تأجير مستلزمات الحفلات",
-        "itemListElement": [
-          {
-            "@type": "Offer",
-            "itemOffered": {
-              "@type": "Service",
-              "name": "تأجير كراسي وطاولات",
-              "description": "تأجير كراسي وطاولات لجميع المناسبات"
-            }
-          },
-          {
-            "@type": "Offer",
-            "itemOffered": {
-              "@type": "Service",
-              "name": "تأجير كنب للمناسبات",
-              "description": "تأجير كنب فاخر للمناسبات والحفلات"
-            }
-          },
-          {
-            "@type": "Offer",
-            "itemOffered": {
-              "@type": "Service",
-              "name": "تأجير شاشات عرض",
-              "description": "تأجير شاشات عرض بمقاسات مختلفة"
-            }
-          },
-          {
-            "@type": "Offer",
-            "itemOffered": {
-              "@type": "Service",
-              "name": "تأجير جلسات شعبية ومغربية",
-              "description": "جلسات شعبية ومغربية للمناسبات"
-            }
-          },
-          {
-            "@type": "Offer",
-            "itemOffered": {
-              "@type": "Service",
-              "name": "تأجير سماعات",
-              "description": "تأجير سماعات صوت عالية الجودة"
-            }
-          },
-          {
-            "@type": "Offer",
-            "itemOffered": {
-              "@type": "Service",
-              "name": "خدمة القهوجيين والصبابين",
-              "description": "خدمة القهوجيين والصبابين للمناسبات"
-            }
-          }
-        ]
-      }
+      "priceRange": "SAR",
+      "applicableCountry": "SA",
+      "returnPolicyCategory": "https://schema.org/MerchantReturnFiniteReturnWindow"
     },
+
     {
       "@type": "FAQPage",
       "mainEntity": [
@@ -133,7 +84,122 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           }
         }
       ]
+    },
+
+    {
+      "@type": "Product",
+      "name": "تأجير كراسي وطاولات",
+      "image": "https://www.lamasat.store/images/chairs-tables.jpg",
+      "description": "تأجير كراسي وطاولات لجميع المناسبات والحفلات بأسعار مناسبة.",
+      "sku": "chairs-001",
+      "brand": { "@type": "Brand", "name": "لمسة" },
+      "offers": {
+        "@type": "Offer",
+        "url": "https://www.lamasat.store/chairs-tables",
+        "priceCurrency": "SAR",
+        "price": "50.00",
+        "priceValidUntil": "2026-12-31",
+        "itemCondition": "https://schema.org/NewCondition",
+        "availability": "https://schema.org/InStock"
+      },
+      "aggregateRating": { "@type": "AggregateRating", "ratingValue": "4.8", "reviewCount": "120" }
+    },
+
+    {
+      "@type": "Product",
+      "name": "تأجير كنب للمناسبات",
+      "image": "https://www.lamasat.store/images/sofa.jpg",
+      "description": "تأجير كنب فاخر للمناسبات والحفلات بأفضل الأسعار.",
+      "sku": "sofa-002",
+      "brand": { "@type": "Brand", "name": "لمسة" },
+      "offers": {
+        "@type": "Offer",
+        "url": "https://www.lamasat.store/sofa",
+        "priceCurrency": "SAR",
+        "price": "150.00",
+        "priceValidUntil": "2026-12-31",
+        "itemCondition": "https://schema.org/NewCondition",
+        "availability": "https://schema.org/InStock"
+      },
+      "aggregateRating": { "@type": "AggregateRating", "ratingValue": "4.9", "reviewCount": "80" }
+    },
+
+    {
+      "@type": "Product",
+      "name": "تأجير شاشات عرض",
+      "image": "https://www.lamasat.store/images/screens.jpg",
+      "description": "تأجير شاشات عرض بمقاسات مختلفة مع أنظمة صوت متكاملة.",
+      "sku": "screen-003",
+      "brand": { "@type": "Brand", "name": "لمسة" },
+      "offers": {
+        "@type": "Offer",
+        "url": "https://www.lamasat.store/screens",
+        "priceCurrency": "SAR",
+        "price": "400.00",
+        "priceValidUntil": "2026-12-31",
+        "itemCondition": "https://schema.org/NewCondition",
+        "availability": "https://schema.org/InStock"
+      },
+      "aggregateRating": { "@type": "AggregateRating", "ratingValue": "4.7", "reviewCount": "60" }
+    },
+
+    {
+      "@type": "Product",
+      "name": "تأجير جلسات شعبية ومغربية",
+      "image": "https://www.lamasat.store/images/sessions.jpg",
+      "description": "جلسات شعبية ومغربية للمناسبات بأفضل جودة وأسعار مناسبة.",
+      "sku": "session-004",
+      "brand": { "@type": "Brand", "name": "لمسة" },
+      "offers": {
+        "@type": "Offer",
+        "url": "https://www.lamasat.store/sessions",
+        "priceCurrency": "SAR",
+        "price": "200.00",
+        "priceValidUntil": "2026-12-31",
+        "itemCondition": "https://schema.org/NewCondition",
+        "availability": "https://schema.org/InStock"
+      },
+      "aggregateRating": { "@type": "AggregateRating", "ratingValue": "4.9", "reviewCount": "45" }
+    },
+
+    {
+      "@type": "Product",
+      "name": "تأجير سماعات",
+      "image": "https://www.lamasat.store/images/speakers.jpg",
+      "description": "تأجير سماعات صوت عالية الجودة لجميع المناسبات.",
+      "sku": "speaker-005",
+      "brand": { "@type": "Brand", "name": "لمسة" },
+      "offers": {
+        "@type": "Offer",
+        "url": "https://www.lamasat.store/speakers",
+        "priceCurrency": "SAR",
+        "price": "150.00",
+        "priceValidUntil": "2026-12-31",
+        "itemCondition": "https://schema.org/NewCondition",
+        "availability": "https://schema.org/InStock"
+      },
+      "aggregateRating": { "@type": "AggregateRating", "ratingValue": "4.8", "reviewCount": "70" }
+    },
+
+    {
+      "@type": "Product",
+      "name": "خدمة القهوجيين والصبابين",
+      "image": "https://www.lamasat.store/images/coffee.jpg",
+      "description": "خدمة القهوجيين والصبابين لتقديم القهوة والشاي والمشروبات للمناسبات.",
+      "sku": "coffee-006",
+      "brand": { "@type": "Brand", "name": "لمسة" },
+      "offers": {
+        "@type": "Offer",
+        "url": "https://www.lamasat.store/coffee",
+        "priceCurrency": "SAR",
+        "price": "300.00",
+        "priceValidUntil": "2026-12-31",
+        "itemCondition": "https://schema.org/NewCondition",
+        "availability": "https://schema.org/InStock"
+      },
+      "aggregateRating": { "@type": "AggregateRating", "ratingValue": "4.9", "reviewCount": "30" }
     }
+
   ]
 }
 </script>
