--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       ]
     },
 
-    {
+  {
       "@type": "Product",
       "name": "تأجير كراسي وطاولات",
       "image": "https://www.lamasat.store/images/chairs-tables.jpg",
@@ -100,11 +100,22 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "price": "50.00",
         "priceValidUntil": "2026-12-31",
         "itemCondition": "https://schema.org/NewCondition",
-        "availability": "https://schema.org/InStock"
+        "availability": "https://schema.org/InStock",
+        "shippingDetails": {
+          "@type": "OfferShippingDetails",
+          "shippingDestination": { "@type": "DefinedRegion", "addressCountry": "SA" },
+          "shippingRate": { "@type": "MonetaryAmount", "value": "0", "currency": "SAR" },
+          "deliveryTime": { "@type": "ShippingDeliveryTime", "handlingTime": "P0D", "transitTime": "P1D" }
+        },
+        "hasMerchantReturnPolicy": {
+          "@type": "MerchantReturnPolicy",
+          "returnPolicyCategory": "https://schema.org/MerchantReturnFiniteReturnWindow",
+          "returnPolicyCountry": "SA",
+          "returnPolicyDays": 7
+        }
       },
       "aggregateRating": { "@type": "AggregateRating", "ratingValue": "4.8", "reviewCount": "120" }
     },
-
     {
       "@type": "Product",
       "name": "تأجير كنب للمناسبات",
@@ -119,11 +130,22 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "price": "150.00",
         "priceValidUntil": "2026-12-31",
         "itemCondition": "https://schema.org/NewCondition",
-        "availability": "https://schema.org/InStock"
+        "availability": "https://schema.org/InStock",
+        "shippingDetails": {
+          "@type": "OfferShippingDetails",
+          "shippingDestination": { "@type": "DefinedRegion", "addressCountry": "SA" },
+          "shippingRate": { "@type": "MonetaryAmount", "value": "0", "currency": "SAR" },
+          "deliveryTime": { "@type": "ShippingDeliveryTime", "handlingTime": "P0D", "transitTime": "P1D" }
+        },
+        "hasMerchantReturnPolicy": {
+          "@type": "MerchantReturnPolicy",
+          "returnPolicyCategory": "https://schema.org/MerchantReturnFiniteReturnWindow",
+          "returnPolicyCountry": "SA",
+          "returnPolicyDays": 7
+        }
       },
       "aggregateRating": { "@type": "AggregateRating", "ratingValue": "4.9", "reviewCount": "80" }
     },
-
     {
       "@type": "Product",
       "name": "تأجير شاشات عرض",
@@ -138,11 +160,22 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "price": "400.00",
         "priceValidUntil": "2026-12-31",
         "itemCondition": "https://schema.org/NewCondition",
-        "availability": "https://schema.org/InStock"
+        "availability": "https://schema.org/InStock",
+        "shippingDetails": {
+          "@type": "OfferShippingDetails",
+          "shippingDestination": { "@type": "DefinedRegion", "addressCountry": "SA" },
+          "shippingRate": { "@type": "MonetaryAmount", "value": "0", "currency": "SAR" },
+          "deliveryTime": { "@type": "ShippingDeliveryTime", "handlingTime": "P0D", "transitTime": "P1D" }
+        },
+        "hasMerchantReturnPolicy": {
+          "@type": "MerchantReturnPolicy",
+          "returnPolicyCategory": "https://schema.org/MerchantReturnFiniteReturnWindow",
+          "returnPolicyCountry": "SA",
+          "returnPolicyDays": 7
+        }
       },
       "aggregateRating": { "@type": "AggregateRating", "ratingValue": "4.7", "reviewCount": "60" }
     },
-
     {
       "@type": "Product",
       "name": "تأجير جلسات شعبية ومغربية",
@@ -157,11 +190,22 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "price": "200.00",
         "priceValidUntil": "2026-12-31",
         "itemCondition": "https://schema.org/NewCondition",
-        "availability": "https://schema.org/InStock"
+        "availability": "https://schema.org/InStock",
+        "shippingDetails": {
+          "@type": "OfferShippingDetails",
+          "shippingDestination": { "@type": "DefinedRegion", "addressCountry": "SA" },
+          "shippingRate": { "@type": "MonetaryAmount", "value": "0", "currency": "SAR" },
+          "deliveryTime": { "@type": "ShippingDeliveryTime", "handlingTime": "P0D", "transitTime": "P1D" }
+        },
+        "hasMerchantReturnPolicy": {
+          "@type": "MerchantReturnPolicy",
+          "returnPolicyCategory": "https://schema.org/MerchantReturnFiniteReturnWindow",
+          "returnPolicyCountry": "SA",
+          "returnPolicyDays": 7
+        }
       },
       "aggregateRating": { "@type": "AggregateRating", "ratingValue": "4.9", "reviewCount": "45" }
     },
-
     {
       "@type": "Product",
       "name": "تأجير سماعات",
@@ -176,11 +220,22 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "price": "150.00",
         "priceValidUntil": "2026-12-31",
         "itemCondition": "https://schema.org/NewCondition",
-        "availability": "https://schema.org/InStock"
+        "availability": "https://schema.org/InStock",
+        "shippingDetails": {
+          "@type": "OfferShippingDetails",
+          "shippingDestination": { "@type": "DefinedRegion", "addressCountry": "SA" },
+          "shippingRate": { "@type": "MonetaryAmount", "value": "0", "currency": "SAR" },
+          "deliveryTime": { "@type": "ShippingDeliveryTime", "handlingTime": "P0D", "transitTime": "P1D" }
+        },
+        "hasMerchantReturnPolicy": {
+          "@type": "MerchantReturnPolicy",
+          "returnPolicyCategory": "https://schema.org/MerchantReturnFiniteReturnWindow",
+          "returnPolicyCountry": "SA",
+          "returnPolicyDays": 7
+        }
       },
       "aggregateRating": { "@type": "AggregateRating", "ratingValue": "4.8", "reviewCount": "70" }
     },
-
     {
       "@type": "Product",
       "name": "خدمة القهوجيين والصبابين",
@@ -195,11 +250,22 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "price": "300.00",
         "priceValidUntil": "2026-12-31",
         "itemCondition": "https://schema.org/NewCondition",
-        "availability": "https://schema.org/InStock"
+        "availability": "https://schema.org/InStock",
+        "shippingDetails": {
+          "@type": "OfferShippingDetails",
+          "shippingDestination": { "@type": "DefinedRegion", "addressCountry": "SA" },
+          "shippingRate": { "@type": "MonetaryAmount", "value": "0", "currency": "SAR" },
+          "deliveryTime": { "@type": "ShippingDeliveryTime", "handlingTime": "P0D", "transitTime": "P1D" }
+        },
+        "hasMerchantReturnPolicy": {
+          "@type": "MerchantReturnPolicy",
+          "returnPolicyCategory": "https://schema.org/MerchantReturnFiniteReturnWindow",
+          "returnPolicyCountry": "SA",
+          "returnPolicyDays": 7
+        }
       },
       "aggregateRating": { "@type": "AggregateRating", "ratingValue": "4.9", "reviewCount": "30" }
     }
-
   ]
 }
 </script>
